# senior-thesis

./: .gitignore  LICENSE  README.md  conv1d_vs_fft_profile_b7568573abba40f397cb6a2cefc68d1f.txt  environment.yaml  environment.yml  mre_scan_debug.py  pyproject.toml  requirements.txt  verify_cumsum.py
flash_stu/layers/: stu_layer.py
flash_stu/modules/: stu.py
plotting/: palette.py  plot_synthetic_results.py
results/copy_transformer_5d000dd533c9/: config.yaml  config_resolved.json
results/copy_transformer_5d000dd533c9/wandb/: latest-run
results/copy_transformer_df3f6cb14ffe/: config.yaml  config_resolved.json
results/copy_transformer_df3f6cb14ffe/wandb/: latest-run
test_data/: shard_0.npy  shard_2.npy
thesis/distributed/: __init__.py  activation_offloading.py  checkpoint.py  float8.py
thesis/distributed/parallelisms/: __init__.py  parallel_dims.py  parallelize_flash_stu.py  parallelize_mamba.py  pipeline_flash_stu.py  pipeline_mamba.py  pipelining_utils.py
thesis/experiments/: prune.py  reference.py  timing.py
thesis/experiments/conf/: __init__.py  config.yaml
thesis/experiments/drafts/: flh2.md  flh2.py
thesis/experiments/notebooks/: cheby.py  check_injectivity_locality.py  check_leakage.py  check_ranks.py  check_segsum.py  doc_sim.py  exploration.ipynb  flh2.ipynb  hankel_generator.py  hashhop.py  ind_heads.py  ind_heads_kron.py  lds_add.py  linear_attention.ipynb  linear_proof.py  matvec.py  mode.py  run.py  run2.py  run3.py  segsum.py  ss.py  sym_stu.py
thesis/experiments/scripts/: run_sweep.sh  run_train.sh
thesis/experiments/synthetics/: 3o.py  __init__.py  alman.py  args.py  b.py  backup.py  boop.py  cheby.py  cheby_conv_demo.py  check_conv.py  check_diff.py  check_spectron.py  conv.py  conv_.py  conv_jax.py  copy_deprecated.py  debug_data.py  exp.py  hf_evals.py  hf_inference.py  jax_scan_attn.py  jax_scan_attn_copy.py  jax_scan_attn_copy_63320915.err  jax_scan_attn_exp.py  jax_scan_attn_mqar.py  jax_scan_attn_mqar_exps.py  jax_scan_attn_mqar_separate.py  jax_scan_bench.py  jax_scan_mqar_minimal.py  job.slurm  k_reduction.py  mad_results.py  registry.py  scan_code_proof.py  sm.py  spectron-340M.yaml  spectron.py  spectron_torch.py  spectron_zoo.py  sum_conv.py  (+20 more)
thesis/experiments/tests/: __init__.py
thesis/experiments/training/: state.py  train.py  utils.py
thesis/experiments/utils/: config.py  data.py  model.py  plotting.py
thesis/models/: __init__.py  generate.py  norms.py  tokenizer.py
thesis/models/flash_stu/: __init__.py  config.json  model.py
thesis/nn/: attention.py  attention_masks.py  attention_mods.py  kv_cache.py  mlp.py  stu.py
thesis/optim/: MultiplicativeWeights.py
thesis/pretraining/: compile.py  config.json  dataloader.py  estimation.py  job.slurm  metrics.py  nd_dataloader.py  run.sh  run_memory_estimation.sh  train.py  utils.py
thesis/utils/: callbacks.py  color.py  logger.py  lr_schedules.py  numerical.py  optimizer.py  pretraining_config.py  profiling.py  pytorch.py  scheduler.py  systems.py
(+122 files in other folders)
